<resources>
    <string name="app_name">abcd</string>
    <string name="action_settings">Settings</string>
    <string name="action_brushes">Brushes</string>
    <string name="action_change_brush_size">Change brush size</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_title_choose_brush">Choose a brush</string>
    <string name="action_dismiss">DISMISS</string>
    <string name="action_undo">Undo</string>
    <string name="action_next">NEXT</string>
    <string name="dialog_title_change_brush_size">Brush size</string>
    <string name="action_apply">APPLY</string>
    <string name="title_activity_styles">Choose a style</string>
    <string name="title_activity_result">Output</string>
    <string name="title_art_styles_activity">Choose artistic style</string>
    <string name="message_uploading_map">Uploading segmentation map…</string>
    <string name="error_uploading_failed_seg_map">Failed to upload segmentation map. Please try again later \n\nERROR : %s</string>
    <string name="error_uploading_failed_seg_map_server_error">Failed to upload segmentation map. Please try again later \n\nERROR : SERVER_ERROR</string>
    <string name="dialog_title_permission">Permission</string>
    <string name="message_external_storage">To save the segmentation map, we need WRITE storage permission</string>
    <string name="message_loading_image">Loading image…</string>
    <string name="dialog_title_choose_art_style">Choose an art style</string>
    <string name="action_art_styles">Art styles</string>
    <string name="action_share">Share</string>
    <string name="title_error">Error</string>
    <string name="dialog_title_share">Share</string>
    <string name="action_share_seg_map">SEGMENTATION MAP</string>
    <string name="action_share_output">OUTPUT</string>
    <string name="action_share_map_and_output">SEG. MAP + OUTPUT</string>
    <string name="error_output_not_ready">Output not ready, please wait.</string>
    <string name="error_version_check">Network error occurred while checking for latest version info. Please check your internet connection and try again. \nERROR : %s</string>
    <string name="error_version_data">Something went wrong. Please try again later</string>
    <string name="dialog_title_new_version">New version</string>
    <string name="action_update">UPDATE</string>
    <string name="action_new">New</string>
    <string name="dialog_title_confirm">Confirm</string>
    <string name="message_confirm_new">Are you sure you want to replace the current canvas with new one ?</string>
    <string name="message_generating_with_random">Generating with random style…</string>
    <string name="message_resubmit_map">Re-submitting segmentation map…</string>
    <string name="dialog_title_maintenance">We\'re sorry</string>
    <string name="action_donate">Donate</string>
    <string name="title_activity_honor">HonorActivity</string>
    <string name="label_the_honor_system">🙏🏻 \nThe Honor System</string>
    <string name="label_or">OR</string>
    <string name="action_support">Support Project</string>
</resources>
