<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.theapache64.abcd.ui.activities.draw.DrawActivity">

    <!--Redo -->
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo_white"
        android:title="@string/action_redo"
        app:showAsAction="always" />

    <!--Undo -->
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo_white"
        android:title="@string/action_undo"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <!--Brush-->
    <item
        android:id="@+id/action_choose_brush"
        android:icon="@drawable/ic_brush_style_white"
        android:title="@string/action_brushes"
        app:showAsAction="always" />

    <!--Brush Size-->
    <item
        android:id="@+id/action_change_brush_size"
        android:icon="@drawable/ic_brush_size_white"
        android:title="@string/action_change_brush_size"
        app:showAsAction="always" />

</menu>
