<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.theapache64.abcd.ui.fragments.dialogfragments.share.ShareHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        tools:context=".ui.fragments.dialogfragments.share.ShareDialogFragment">
        <!--Title-->
        <TextView
            android:id="@+id/tv_title"
            style="@style/dialog_fragment_title_style"
            fontPath="fonts/GoogleSans-Medium.ttf"
            android:text="@string/dialog_title_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Seg map-->
        <Button
            android:id="@+id/b_share_seg_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{()-> handler.onShareSegMapClicked()}"
            android:text="@string/action_share_seg_map"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <!--Output-->
        <Button
            android:id="@+id/b_share_output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()-> handler.onShareOutputClicked()}"
            android:text="@string/action_share_output"
            app:layout_constraintEnd_toEndOf="@id/b_share_seg_map"
            app:layout_constraintStart_toStartOf="@id/b_share_seg_map"
            app:layout_constraintTop_toBottomOf="@id/b_share_seg_map" />

        <!--Map + Output-->
        <Button
            android:id="@+id/b_share_map_and_output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()-> handler.onShareSegMapAndOutputClicked()}"
            android:text="@string/action_share_map_and_output"
            app:layout_constraintEnd_toEndOf="@id/b_share_output"
            app:layout_constraintStart_toStartOf="@id/b_share_output"
            app:layout_constraintTop_toBottomOf="@id/b_share_output" />

        <!--Dismiss-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_dismiss"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> handler.onDismissClicked()}"
            android:text="@string/action_dismiss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/b_share_map_and_output" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>