<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.theapache64.abcd.ui.fragments.dialogfragments.brushsize.BrushSizeViewModel" />

        <variable
            name="handler"
            type="com.theapache64.abcd.ui.fragments.dialogfragments.brushsize.BrushSizeHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.dialogfragments.brushsize.BrushSizeDialogFragment">


        <!--Title-->
        <TextView
            android:id="@+id/tv_title"
            style="@style/dialog_fragment_title_style"
            fontPath="fonts/GoogleSans-Medium.ttf"
            android:text="@string/dialog_title_change_brush_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--Brushes-->
        <SeekBar
            android:id="@+id/sb_brush_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:progress="@={viewModel.progress}"
            app:layout_constraintBottom_toTopOf="@id/b_dismiss"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <!--Dismiss-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_dismiss"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{()-> handler.onDismissClicked()}"
            android:text="@string/action_dismiss"
            app:layout_constraintBottom_toBottomOf="@id/b_apply"
            app:layout_constraintEnd_toStartOf="@id/b_apply"
            app:layout_constraintTop_toTopOf="@id/b_apply" />


        <!--Apply-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_apply"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{()-> handler.onApplyClicked()}"
            android:text="@string/action_apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/sb_brush_size" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>